# rtmpPublish

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/luban/publisher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannl.cpp  AudioChannl.h  VideoChannel.cpp  VideoChannel.h  VideoChannnel.cpp  VideoChannnel.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/luban/publisher/: LivePusher.java  MainActivity.java
app/src/main/java/com/luban/publisher/channel/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/luban/publisher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
